Bug 309461 - when starting on login, kleopatra starts maximised
Summary: when starting on login, kleopatra starts maximised
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Parameshwara Bhat
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-03 06:47 UTC by Parameshwara Bhat
Modified: 2013-08-18 11:43 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Parameshwara Bhat 2012-11-03 06:47:51 UTC
When kleopatra starts automatically after a login , it should start minimised in the system tray. Itis starting always with a full window mode, requiring one to  close it, before it minimises to  the system tray. A manual step required now after every login.This is irritating.

Reproducible: Always

Steps to Reproduce:
1.Run Kleopatra ( like generate a personal key ). It will hide to system tray when closed.
2.Next login, it starts with an open Window, rather than be available in the system tray
3.
Actual Results:  
Always on login, starts with an open window.

Expected Results:  
be available in system tray, but do not bother

look above.
Comment 1 Emanuel Schütze 2013-05-10 06:38:14 UTC
Can you test it with a current Kleopatra from KDE 4.10.3 please? I'll do a test with Gpg4win.
Comment 2 Parameshwara Bhat 2013-05-10 09:06:09 UTC
(In reply to comment #1)
> Can you test it with a current Kleopatra from KDE 4.10.3 please? I'll do a
> test with Gpg4win.
I am on KDE 4.10.2 on Opensuse 12.1. I have to wait till 4.10.3 is available in tumbleweed. I will sure update you when I get it ( hope in a week's time)
Comment 3 Parameshwara Bhat 2013-07-11 04:36:59 UTC
I confirm this on KDE 4.10.3 on Opensuse 12.3. Kleopatra starts maximised on login
Comment 4 Blackpaw 2013-08-03 01:46:55 UTC
I found where this is happening and have a fix planned (pretty straightforward) unless someone is already working on it.
Comment 5 Blackpaw 2013-08-18 11:43:10 UTC
Git commit c0b2c37703eb5d1d9445614d1be39ee4e7127e90 by Lindsay Mathieson.
Committed on 18/08/2013 at 11:34.
Pushed by mathieson into branch 'master'.

Implements session restore

Adds:
- Session restore
- Saving of MainWindow geometry and visible state
- Toggling of visibility by clicking SysTrayIcon.
- Splash screen is not shown when restoring session.

Internal behaviour change. To enable preservation of state when the
session is being saved, the MainWindow is no longer closed and deleted
when minimising to the system tray, rather it is hidden.
REVIEW: 112130
REVIEWED-BY: mathieson

M  +49   -3    kleopatra/kleopatraapplication.cpp
M  +3    -0    kleopatra/kleopatraapplication.h
M  +6    -1    kleopatra/main.cpp
M  +49   -3    kleopatra/mainwindow_desktop.cpp
M  +5    -0    kleopatra/mainwindow_desktop.h
M  +5    -15   kleopatra/systrayicon.cpp
M  +0    -2    kleopatra/systrayicon.h

http://commits.kde.org/kdepim/c0b2c37703eb5d1d9445614d1be39ee4e7127e90