Implements session restore

Adds:
- Session restore
- Saving of MainWindow geometry and visible state
- Toggling of visibility by clicking SysTrayIcon.
- Splash screen is not shown when restoring session.

Internal behaviour change. To enable preservation of state when the
session is being saved, the MainWindow is no longer closed and deleted
when minimising to the system tray, rather it is hidden.

BUG: 309461
REVIEW: 112130
REVIEWED-BY: mathieson